# openslide

./: meson.build  meson_options.txt
deepzoom-server/: Makefile  README.md  go.mod
deepzoom-server/cmd/server/: main.go
deepzoom-server/pkg/deepzoom/: deepzoom.go
deepzoom-server/pkg/metrics/: metrics.go
deepzoom-server/pkg/openslide/: openslide.go
deepzoom-server/pkg/pathutil/: pathutil.go
deepzoom-server/pkg/server/: server.go
deepzoom-server/static/: app.js  index.html
docs/: http-performance-review.md
scripts/: build-test.sh  build_test.py  syntax_check.py
src/: meson.build  openslide-file.c  openslide-fsspec.c  openslide-fsspec.h  openslide-http.c  openslide-http.h  openslide-opendal.c  openslide-opendal.h  openslide-private.h
