option(
  'version_suffix',
  type : 'string',
  description : 'Suffix to append to the package version string',
)
option(
  'test',
  type : 'feature',
  yield : true,
  description : 'Build tests',
)
option(
  'doc',
  type : 'feature',
  yield : true,
  description : 'Enable building documentation (requires Doxygen)',
)
option(
  '_export_internal_symbols',
  type : 'boolean',
  value : false,
  description : 'For test suite; do not use',
)
option(
  '_gcov',
  type : 'boolean',
  value : false,
  description : 'For test suite; do not use',
)
option(
  '_sanitize',
  type : 'boolean',
  value : false,
  description : 'For test suite; do not use',
)
option(
  'http_backend',
  type : 'combo',
  choices : ['curl', 'fsspec'],
  value : 'curl',
  description : 'HTTP backend: curl (native) or fsspec (Python-based, supports S3/GCS/Azure)',
)
